[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-logs"
version = "1.0.0"
description = "Automatically detect and redact secrets, API keys, and PII from logs, terminal output, and files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "safe-logs contributors"}]
keywords = ["security", "redaction", "secrets", "pii", "logs", "privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.0",
]

[project.scripts]
safe-logs = "safe_logs.cli:cli"

[tool.setuptools.packages.find]
include = ["safe_logs*"]
